feat: pawn을 관리하는 PawnPiece 구현 및 테스트 추가