@@ -1,13 +1,11 @@
 package chess.domain.piece;
 
-import static chess.domain.movement.Movement.CONTINUOUS_DIAGONAL;
-import static chess.domain.movement.Movement.CONTINUOUS_L_SHAPE;
-import static chess.domain.movement.Movement.CONTINUOUS_STRAIGHT;
-import static chess.domain.movement.Movement.DISCONTINUOUS_DIAGONAL;
-import static chess.domain.movement.Movement.DISCONTINUOUS_STRAIGHT;
-
 import chess.domain.movement.Movement;
+
+import java.util.Collections;
 import java.util.List;
+
+import static chess.domain.movement.Movement.*;
 
 public enum PieceType {
     KING("k", List.of(DISCONTINUOUS_STRAIGHT, DISCONTINUOUS_DIAGONAL)),
@@ -17,7 +15,7 @@ public enum PieceType {
     KNIGHT("n", List.of(CONTINUOUS_L_SHAPE)),
     BISHOP("b", List.of(CONTINUOUS_DIAGONAL, DISCONTINUOUS_DIAGONAL)),
     PAWN("p", List.of(CONTINUOUS_STRAIGHT, DISCONTINUOUS_STRAIGHT, DISCONTINUOUS_DIAGONAL)),
-    INITIAL_PAWN("p", List.of(CONTINUOUS_STRAIGHT, DISCONTINUOUS_STRAIGHT));
+    EMPTY(".", Collections.emptyList());
 
     private final String name;
     private final List<Movement> movements;
